# gray-hole

./: Cargo.toml  LICENSE
gray-hole-client/: Cargo.toml
gray-hole-client/src/: main.rs
gray-hole-lib/: Cargo.toml
gray-hole-lib/src/: client.rs  lib.rs  message.rs  server.rs  types.rs
gray-hole-server/: Cargo.toml
gray-hole-server/src/: main.rs
