[package]
name = "gray-hole-lib"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.7"
anyhow = "1.0.66"
serde = {version = "1.0.148", features = ["derive"]}
bincode = "1.3.2"
